--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.1", features = ["derive"] }
+directories = "5.0.1"
 rusqlite = { version = "0.31.0", features = ["array", "bundled"] }
 thiserror = "1.0.57"
